Visual bug fix on mobile screens

--- a/client/src/pages/Register.module.css
+++ b/client/src/pages/Register.module.css
@@ -188,7 +188,7 @@
 
   .labeldiv {
     width: min(100%, 420px);
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .formdiv {
