--- a/client/src/pages/ResetPassword.module.css
+++ b/client/src/pages/ResetPassword.module.css
@@ -167,7 +167,7 @@
 
   .labeldiv {
     width: min(100%, 420px);
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .formdiv {
